welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {var nbPas=0
        	while (!estSurBiscuit()) {avance(); nbPas=nbPas+1}
        prendBiscuit();
        while ( nbPas=0) {recule(); nbPas=nbPas-1}
        poseBiscuit()
        for (i <- 1 to 7) {
            goAndGet();
            droite();
            recule();
            gauche();
        }
